am creat pagina de profil

--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,32 @@
 <h1>Lavinia Stan </h1>
+<img src="download.jpg"></img>
+<h2 align=center>Superputeri</h2>
+<ul align=center>Database Girl</ul>
+<ul align=center>Multitasking</ul>
+<h3>Date de Contact</h3>
+<table style=border:solid>
+    <tr>
+        <td>Nume:</td>
+        <td>Lavinia</td>
+    </tr>
+    <tr>
+        <td>Email:</td>
+        <td>lavinia.stan95@gmail.com</td>
+    </tr>
+    <tr>
+        <td>Text:</td>
+        <td>insert your text here</td>
+    </tr>
+</table>
+<h3>Utile</h3>
+<table align=left>
+    <tr>
+        <td><a href="http://www.google.ro">Blog</a></td>
+    </tr>
+    <tr>
+       <td><a href="http://www.linkedin.com">Linkedin</a></td> 
+    </tr>
+    <tr>
+        <td><a href="http://fb.com">Facebook</a></td>
+    </tr>
+</table>
